--- a/css/master.css
+++ b/css/master.css
@@ -98,3 +98,47 @@ color: white;
 text-transform: uppercase;
 font-weight: bold;
 }
+.spot {
+padding-top: 4%;
+padding-bottom:4%;
+width: 100%;
+height: 20vh;
+background-color: silver;
+text-align: center;
+}
+.spot h2{
+color: navy;
+}
+.spot p{
+color: grey;
+}
+.contenitoredue {
+width: 90%;
+margin: 0 auto;
+height: 120vh;
+}
+
+.box{
+margin-top: 5%;
+width: 33.33%;
+height:80VH;
+border: 1PX SOLID RED;
+float: left;
+}
+.img{
+margin-right: 30%;
+margin-left: 30%;
+width: 40%;
+height: 40%;
+}
+.img_computer {
+  margin-left: 20%;
+  width: 60%;
+  height: 60%;
+}
+.img_doc {
+  
+  margin-left: 20%;
+  width: 47%;
+  height: 45%;
+}
