--- a/css/master.css
+++ b/css/master.css
@@ -2,8 +2,6 @@
 padding: 0;
 margin: 0;
 box-sizing: border-box;
-}
-body{
 font-family: sans-serif;
 }
 .clearfix {
@@ -115,7 +113,7 @@ color: grey;
 .contenitoredue {
 width: 90%;
 margin: 0 auto;
-height: 120vh;
+
 }
 
 .box{
@@ -153,4 +151,64 @@ margin: 5% 0  5% 40%;
 .content p{
 text-align: center;
 color: grey;
+}
+.contenitoretre {
+width: 90%;
+margin: 0 auto;
+;
+}
+/* fine  contenitore due */
+.contenitoretre hr{
+margin-top: 2%;
+margin-bottom: 2%;
+}
+
+.big_box{
+float: left;
+width: 50%;
+height: 90%;
+}
+.content_text{
+width: 80%;
+padding: 5%;
+
+}
+.content_text p {
+color: grey;
+margin-top: 5%;
+margin-bottom:5%;
+text-transform: lowercase;
+}
+.content_text a{
+color: dodgerblue;
+}
+footer{
+width: 100%;
+background-color: silver;
+}
+.footer_left{
+float:left;
+width:50%;
+height: 10vh;
+
+}
+.footer_left h2{
+margin-top: 2%;
+margin-left: 10%;
+}
+.footer_right{
+float:right;
+width:50%;
+height: 10vh;
+
+}
+.but {
+color: white;
+margin-top: 2%;
+text-align: center;
+margin-left: 60%;
+background-color: lime;
+width: 30%;
+padding: 2%;
+border-radius: 5px;
 }
